<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000330"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:text="@string/text_main"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_acti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_acti"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/custom_buttom"
        android:text="@string/button_activity"
        app:layout_constraintBottom_toTopOf="@+id/button_brod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_brod"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:background="@drawable/custom_buttom"
        android:text="@string/button_broadcast"
        app:layout_constraintBottom_toTopOf="@+id/button_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_acti" />

    <Button
        android:id="@+id/button_cont"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:background="@drawable/custom_buttom"
        android:text="@string/button_content"
        app:layout_constraintBottom_toTopOf="@+id/button_serv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_brod" />

    <Button
        android:id="@+id/button_serv"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/button_service"
        app:layout_constraintBottom_toTopOf="@+id/button_inte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cont" />

    <Button
        android:id="@+id/button_inte"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:background="@drawable/custom_buttom"
        android:text="@string/button_intent1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_serv" />

</androidx.constraintlayout.widget.ConstraintLayout>