<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".Service">

    <Button
        android:id="@+id/btn_backSer"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_contoh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_contoh"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/button_service"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_ser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ser"
        android:layout_width="298dp"
        android:layout_height="221dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/penjelasan_service"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/Btn_materi5"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_buttom"
        android:onClick="Link_materi"
        android:text="@string/button_materi"
        app:layout_constraintEnd_toEndOf="@+id/btn_contoh"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/btn_contoh"
        app:layout_constraintTop_toBottomOf="@+id/btn_contoh" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/contoh_SER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/btn_backSer"
        app:layout_constraintTop_toBottomOf="@+id/text_ser" />
</androidx.constraintlayout.widget.ConstraintLayout>