<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".Intent1">

    <Button
        android:id="@+id/btn_backInt"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_contoh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_contoh" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/button_intent1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/penjelasan_intent"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/Btn_materi4"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_buttom"
        android:onClick="Link_materi_int"
        android:text="@string/button_materi"
        app:layout_constraintEnd_toEndOf="@+id/btn_contoh"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/btn_contoh"
        app:layout_constraintTop_toBottomOf="@+id/btn_contoh" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/contoh_INT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/btn_backInt"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
</androidx.constraintlayout.widget.ConstraintLayout>