<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".Content">

    <Button
        android:id="@+id/btn_backCon"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintBottom_toTopOf="@+id/btn_contoh"
        app:layout_constraintEnd_toStartOf="@+id/btn_contoh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contoh" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/button_content"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:text="@string/penjelasan_content"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/Btn_materi3"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_buttom"
        android:onClick="Link_materi"
        android:text="@string/button_materi"
        app:layout_constraintEnd_toStartOf="@+id/btn_contoh"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/btn_contoh"
        app:layout_constraintTop_toBottomOf="@+id/btn_contoh" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/contoh_CON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_backCon"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />
</androidx.constraintlayout.widget.ConstraintLayout>