<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/button_activity"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_materi1"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_buttom"
        android:onClick="Link_materi"
        android:text="@string/button_materi"
        app:layout_constraintEnd_toEndOf="@+id/btn_contoh"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/btn_contoh"
        app:layout_constraintTop_toBottomOf="@+id/btn_contoh" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="121dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/penjelasan_activity"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/contoh_syntax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_backAct"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_contoh"
        app:layout_constraintEnd_toStartOf="@+id/btn_contoh"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_contoh"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>