<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".contoh_activity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/contoh_ACT"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="300dp"
        android:layout_height="148dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="@string/contoh_activity"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />
</androidx.constraintlayout.widget.ConstraintLayout>