<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".contoh_service">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/contoh_SER"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="296dp"
        android:layout_height="207dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:gravity="center_vertical"
        android:text="@string/contoh_intent"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintEnd_toStartOf="@+id/textView31"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />
</androidx.constraintlayout.widget.ConstraintLayout>