<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".contoh_intent">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/contoh_INT"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:text="@string/contoh_intent"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />
</androidx.constraintlayout.widget.ConstraintLayout>