<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#816F6F6F"
    tools:context=".contoh_broadcast">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/contoh_BRO"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="300dp"
        android:layout_height="153dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:gravity="center_vertical"
        android:text="@string/contoh_broadcast"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/btn_contoh"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/custom_back"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />
</androidx.constraintlayout.widget.ConstraintLayout>